corrected base files

--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -1,7 +1,7 @@
 ---
 namespace: mc-dev
 resources:
-- ./../../base
-- namespace.yml
+- ../../base/
+- namespace.yaml
 patchesStrategicMerge:
-- deploy.yml
+- deploy.yaml
