--- a/application-dev.yaml
+++ b/application-dev.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/mgirisankar/guestbook.git
+    repoURL: https://github.com/MarkAntonyGit/ArgoCD
     targetRevision: HEAD
     path: overlays/dev
   destination:
