--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
 resources:
-  - fe.yml
-  - fe-svc.yml
-  - redis.yml
-  - redis-svc.yml
+  - fe.yaml
+  - fe-svc.yaml
+  - redis.yaml
+  - redis-svc.yaml
